log_stash/Andromeda-annulus-calc-10599338-error.log
  File "M31_signal_vs_entire_sky.py", line 521
    ``
    ^
SyntaxError: invalid syntax
